Añadido la clase CajaFuerte y la opción de pulsar el botón. Añadida nueva actividad (CajaFuerte)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,29 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/virtual_alhambra"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="191dp"
+        android:layout_height="88dp"
+        android:onClick="tocaCajaFuerte"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@color/colorAccent" />
+
+    <!--<ImageButton2
+        android:id="@+id/imageButton2"
+        android:layout_width="191dp"
+        android:layout_height="88dp"
+        app:srcCompat="@color/colorAccent"
+        tools:layout_editor_absoluteX="221dp"
+        tools:layout_editor_absoluteY="642dp" /> -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
