--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondogesto"
     tools:context=".MainActivity">
 
 
@@ -15,8 +15,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.433"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.307"
+        tools:ignore="MissingConstraints"
+        tools:visibility="invisible" />
 
     <TextView
         android:id="@+id/textView2"
@@ -47,6 +48,9 @@
         android:text="Boton "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@color/colorAccent" />/>
+        app:srcCompat="@color/colorAccent" /><![CDATA[
 
+    />
+
+]]>
 </androidx.constraintlayout.widget.ConstraintLayout>
