--- a/app/src/main/res/layout/activity_area_c.xml
+++ b/app/src/main/res/layout/activity_area_c.xml
@@ -10,18 +10,16 @@
 
     <ImageButton
         android:id="@+id/imageButton3"
-        android:layout_width="391dp"
-        android:layout_height="229dp"
+        android:layout_width="409dp"
+        android:layout_height="243dp"
         android:background="@drawable/clase"
         android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
         android:backgroundTintMode="add"
         android:onClick="activarCajaFuerte"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@color/common_google_signin_btn_text_dark_disabled" />
 
     <TextView
@@ -29,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="casual"
-        android:text="¿Qué ves?"
+        android:text="¿Qué ves (C)?"
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -40,19 +38,20 @@
 
     <ImageButton
         android:id="@+id/imageButton2"
-        android:layout_width="391dp"
-        android:layout_height="233dp"
+        android:layout_width="409dp"
+        android:layout_height="243dp"
         android:background="@drawable/fachada"
         android:onClick="activarCajaFuerte"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@color/common_google_signin_btn_text_light_disabled"
-        tools:layout_editor_absoluteY="300dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
+        app:srcCompat="@color/common_google_signin_btn_text_light_disabled" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="391dp"
-        android:layout_height="233dp"
+        android:layout_width="409dp"
+        android:layout_height="243dp"
         android:background="@drawable/nada"
         android:fontFamily="serif-monospace"
         android:onClick="sigueInvestigando"
@@ -61,7 +60,9 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
