--- a/app/src/main/res/layout/activity_area_d.xml
+++ b/app/src/main/res/layout/activity_area_d.xml
@@ -15,7 +15,7 @@
         android:background="@drawable/clase"
         android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
         android:backgroundTintMode="add"
-        android:onClick="activarCajaFuerte"
+        android:onClick="activarCajaFuertePrimera"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
         android:layout_width="409dp"
         android:layout_height="243dp"
         android:background="@drawable/fachada"
-        android:onClick="activarCajaFuerte"
+        android:onClick="activarCajaFuerteSegunda"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
