--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/botoncajafuerte"
         android:layout_width="191dp"
         android:layout_height="88dp"
         android:onClick="tocaCajaFuerte"
