--- a/app/src/main/res/layout/activity_leyenda.xml
+++ b/app/src/main/res/layout/activity_leyenda.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/geometria2"
+    android:orientation="vertical">
 
     <View
         android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="?android:attr/listDivider" />
+        android:background="@drawable/geometria2" />
 
     <TextView
         android:id="@+id/textView7"
@@ -17,8 +18,9 @@ android:orientation="vertical">
         android:layout_height="47dp"
         android:layout_marginTop="36dp"
         android:fontFamily="cursive"
-        android:text="Leyendas"
+        android:text=""
         android:textAlignment="center"
+        android:textColor="@android:color/background_dark"
         android:textSize="30sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +39,7 @@ android:orientation="vertical">
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -46,52 +48,13 @@ android:orientation="vertical">
                 android:layout_width="411dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="568dp"
-                android:background="#95FDFDFD"
                 android:fontFamily="cursive"
-                android:text="        La leyenda de El Suspiro del Moro
-                \n\n    En el año de 1492 los Reyes Católicos
-                \n      conquistaron el reino de Granada.
-                \n      Cuenta la leyenda que, tras entregar el
-                \n      rey Boabdil las llaves de la ciudad a
-                \n      los reyes de Castilla y Aragón, cuando
-                \n      alcanzaba la colina así conocida, se
-                \n      volvió por fin y, suspirando, rompió
-                \n      a llorar, momento en que su madre
-                \n      le dijo: 'Llora como mujer lo que no
-                \n      has sabido defender como hombre'.
-                \n\n\n      La leyenda de La Silla del Moro
-                \n\n    La vida supuestamente disoluta que
-                \n      llevaba el rey Boabdil, al parecer
-                \n      dio lugar a un amotinamiento en la
-                \n      ciudad de Alhambra. Por este motivo,
-                \n      el rey tuvo que refugiarse en una
-                \n      apartada colina desde la que, sentado
-                \n      en su cima, divisaba su ciudad
-                \n      sublevada, que por tal razón aún hoy
-                \n      es así conocida.
-                \n\n\n
-La leyenda de El Reloj de Sol
-                \n\n     Según cuentan, la Alhambra en su
-                \n       conjunto puede ser considerada un
-                \n       enorme reloj de sol. Esto es así ya
-                \n       que, al igual que con un reloj de
-                \n       sol podríamos seguir el transcurrir
-                \n       de todas las horas del día, en la
-                \n        ciudad granadina podemos hacerlo a
-                \n        través de sus estancias. Este fenómeno
-                \n       es especialmente evidente al
-                \n       mediodía, momento en que las
-                \n           dependencias quedan divididas por
-                \nsu mitad como efecto de la sombra.
-
-
-
-
-
-"
+                android:text=""
                 android:textAlignment="center"
+                android:textColor="@android:color/background_dark"
                 android:textSize="24sp"
-                android:textStyle="italic" />
+                android:textStyle="italic"
+                android:visibility="visible" />
 
         </LinearLayout>
     </ScrollView>
