--- a/app/src/main/res/layout/activity_poema.xml
+++ b/app/src/main/res/layout/activity_poema.xml
@@ -23,7 +23,7 @@
         android:fontFamily="cursive"
         android:text="TextView"
         android:textAlignment="center"
-        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +41,7 @@
         android:text="José María Torres Morenilla"
         android:textAlignment="viewEnd"
         android:textAllCaps="false"
-        android:textColor="@color/common_google_signin_btn_text_light_pressed"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -73,7 +73,7 @@
                 android:fontFamily="cursive"
                 android:text="TextView"
                 android:textAlignment="center"
-                android:textColor="@color/common_google_signin_btn_text_dark_focused"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="24sp"
                 android:textStyle="italic" />
 
