Pantalla de inicio "bonita" Icono

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,24 +30,27 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.022" />
 
-    <ImageButton
+    <Button
         android:id="@+id/botoncajafuerte"
-        android:layout_width="191dp"
-        android:layout_height="88dp"
+        android:layout_width="205dp"
+        android:layout_height="85dp"
+        android:background="@color/colorAccent"
         android:onClick="tocaCajaFuerte"
+        android:text="Caja Fuerte"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@color/colorAccent" />
+        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="191dp"
-        android:layout_height="88dp"
+        android:layout_width="205dp"
+        android:layout_height="85dp"
+        android:background="@color/colorAccent"
         android:onClick="selectPersonaje"
         android:text="Reconocimiento Edificios"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@color/colorAccent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -65,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="100dp"
+        android:background="@color/colorAccent"
         android:onClick="leyenda"
         android:text="Unido"
         android:visibility="invisible"
